Thu Apr 25 07:20:58 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace.doxygen:
          Set MAX_DOT_GRAPH_DEPTH to 5, thanks to Clyde Gerber
          <clyde_gerber at symantec dot com> for motivating this.

Wed Apr 24 14:43:25 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Acceptor.{h,cpp}, ace/Connector.{h,cpp}:
        * ace/Svc_Handler.{h,cpp}: Replaced all the obsolete
          ACE_PEER_{STREAM,ACCEPTOR,CONNECTOR} macros that have been
          deprecated.  Thanks to Clyde Gerber <clyde_gerber at symantec
          dot com> for motivating this.

Wed Apr 24 14:42:50 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Global_Macros.h: Added comments that indicate the
          ACE_PEER_{STREAM,ACCEPTOR,CONNECTOR} macros have been
          deprecated.  Thanks to Clyde Gerber <clyde_gerber at symantec
          dot com> for motivating this.

Wed Apr 24 13:57:02 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Svc_Handler.{h,cpp}: Zapped the obsolete ACE_PEER_STREAM*
          macros since compilers that ACE supports now should handle the
          traits classes properly.

Thu Apr 18 16:42:03 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Svc_Handler.h: Updated the documentation for
          ACE_Svc_Handler::open() method.  Thanks to Andreas Florath
          <andreas at florath dot org> for motivating this.

Mon Apr 15 01:59:34 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * examples/Connection/misc/Connection_Handler.cpp: Improved the
          documentation.

Mon Apr 22 14:43:53 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Hash_Map_Manager_T.inl:
        * ace/Hash_Map_Manager_T.cpp:
          Fixed maybe unitialized warnings

Fri Apr 19 19:15:42 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * bin/fuzz.pl:

          Added a fuzz check for the category-specifc ACE log macros.
